  * xine broadcaster (send stream to multiple xine clients simultaneously)
    start master with 'xine --broadcast-port xxxx'
    start slaves with 'xine slave://master_address:xxxx'
  * nvtv updates and fixes
  
xine-lib (1-beta12)
  * enabled SVQ3 video decoding via ffmpeg
  * playback of theorastreams added
  * updated nvtv support, and bug fixes
  * ac3 pcm-audiotype .wav files now supported via software decode.
    Passthru not implemented yet due to lack of re-sync code in liba52 passthru mode.
  * playback of cd/dvd over the network (see README.network_dvd)
  * use variable block program stream demuxer for mpeg2 files
  * cdda improvements (error handling, device on mrl)
  * input_pvr (ivtv) updates
  * demux_mpeg_block improved to cure problems with VCDs and bogus encrypted messages.
    
xine-lib (1-beta11)
  * fix bugs in selecting ogm subtitles
  * fix multiple lines subtitles' display in OGM container
  * fix fastforward bug (slow playback with unused cpu cicles)
  * fix input_net (tcp) seeking
  * network input plugins do not freeze when no data is available
  * fix seeking in ogg files
  * fix av/desync in ogmfiles
  * fix ac3 in ogm support
  * no more xshm completion events
  * performance improvements (enabled ffmpeg direct rendering)
  * faster seeking
  * simple 10-band equalizer
  * fix scaling of video with a pixel aspect ratio not equal to one
  * mms protocols (mmst + mmsh ) bugfixes
  * new input plugin api
  * Quicktime fixes (now all Matrix: Reloaded teasers and trailers play)
  * fix playback of video files created by Canon digital cameras

xine-lib (1-beta10)
  * loading and displaying png images (e.g. for logos)
  * capability of on-the-fly stream rewiring
  * libdvdnav: PGC based positioning:
    seeking on DVDs now spans the entire feature
  * font encoding cleanup (xinefonts use unicode now)
  * freetype2 support for OSD
  * ffmpeg sync (build 4663). WMV8 decoder enabled.
  * much more accurate time display with DVDs